--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--//
+
+    Weakness of attitude becomes weakness of character.
+
+//-->
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -5,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="TThis is me!">
+    <meta name="description" content="It's me! <3">
     <meta name="author" content="Marcelo Fabiano">
 
     <title>Marcelo Fabiano</title>
@@ -36,6 +41,7 @@
         </ul>
     </nav>
     <div class="me">
+    <!--SIM! GAMB NA VEIA-->
         <p style="text-align:center;"><img src="img/me.png" width="45%" height="45%" /></p>
     </div>
 </body>
