--- a/index.html
+++ b/index.html
@@ -22,12 +22,28 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script language='JavaScript'>
-    function bloquear(e){return false}
-    function desbloquear(){return true}
+    function bloquear(e){
+        return false
+    }
+    function desbloquear(){
+        return true
+    }
     document.onselectstart=new Function (&quot;return false&quot;)
     if (window.sidebar){document.onmousedown=bloquear
-    document.onclick=desbloquear}
+    document.onclick=desbloquear
+    }
     </script>
+
+    <script>
+    function longClickHandler(e){
+    e.preventDefault();
+    $("body").append("<p>You longclicked. Nice!</p>");
+    }
+
+    $("p a").longclick(250, longClickHandler);
+    </script>
+    <script type="text/javascript"
+        src="https://raw.github.com/pisi/Longclick/master/jquery.longclick-min.js"></script>
 
 </head>
 
