UPDATE SCRIPT WEBKIT

--- a/index.html
+++ b/index.html
@@ -33,27 +33,15 @@
     document.onclick=desbloquear
     }
     </script>
-
-    <script>
-    function longClickHandler(e){
-    e.preventDefault();
-    $("body").append("<p>You longclicked. Nice!</p>");
-    }
-
-    $("p a").longclick(250, longClickHandler);
-    </script>
-    <script type="text/javascript"
-        src="https://raw.github.com/pisi/Longclick/master/jquery.longclick-min.js"></script>
-
 </head>
 
 <body onselectstart='return false' ondragstart='return false'>
     <nav class="social">
         <ul>
-            <li><a href="http://twitter.com/celofabiano">Twitter <i class="fa fa-twitter"></i></a></li>
-            <li><a href="http://facebook.com/celofabiano">Facebook <i class="fa fa-facebook"></i></a></li>
-            <li><a href="http://instagram.com/celofabiano">Instagram <i class="fa fa-instagram"></i></a></li>
-            <li><a href="https://github.com/m-a-r-c-e-l-o">GitHub <i class="fa fa-github"></i></a></li>          
+            <li><a href="http://twitter.com/celofabiano" target="_blank">Twitter <i class="fa fa-twitter"></i></a></li>
+            <li><a href="http://facebook.com/celofabiano" target="_blank">Facebook <i class="fa fa-facebook"></i></a></li>
+            <li><a href="http://instagram.com/celofabiano" target="_blank">Instagram <i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://github.com/m-a-r-c-e-l-o" target="_blank">GitHub <i class="fa fa-github"></i></a></li>          
         </ul>
     </nav>
     <div class="me">
