--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 <body onselectstart='return false' ondragstart='return false'>
     <nav class="social">
         <ul>
-            <li><a href="http://twitter.com/celofabiano" target="_blank">Twitter <i class="fa fa-twitter"></i></a></li>
-            <li><a href="http://facebook.com/celofabiano" target="_blank">Facebook <i class="fa fa-facebook"></i></a></li>
-            <li><a href="http://instagram.com/celofabiano" target="_blank">Instagram <i class="fa fa-instagram"></i></a></li>
-            <li><a href="https://github.com/m-a-r-c-e-l-o" target="_blank">GitHub <i class="fa fa-github"></i></a></li>          
+            <li><a href="http://twitter.com/celofabiano" target="_blank" rel="noopener">Twitter <i class="fa fa-twitter"></i></a></li>
+            <li><a href="http://facebook.com/celofabiano" target="_blank" rel="noopener">Facebook <i class="fa fa-facebook"></i></a></li>
+            <li><a href="http://instagram.com/celofabiano" target="_blank" rel="noopener">Instagram <i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://github.com/m-a-r-c-e-l-o" target="_blank" rel="noopener">GitHub <i class="fa fa-github"></i></a></li>          
         </ul>
     </nav>
     <div class="me">
