--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#000000">
     <meta name="description" content="It's me! <3">
     <meta name="author" content="Marcelo Fabiano">
 
