--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'> 
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <script language='JavaScript'>
+    <script>
     function bloquear(e){
         return false
     }
