--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     function desbloquear(){
         return true
     }
-    document.onselectstart=new Function (&quot;return false&quot;)
+    document.onselectstart=new Function ("return false")
     if (window.sidebar){document.onmousedown=bloquear
     document.onclick=desbloquear
     }
