--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </script>
 </head>
 
-<body onselectstart='return false' ondragstart='return false'>
+<body ondragstart='return false'>
     <nav class="social">
         <ul>
             <li><a href="http://twitter.com/celofabiano" target="_blank" rel="noopener">Twitter <i class="fa fa-twitter"></i></a></li>
