--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </nav>
     <div class="me">
     <!--SIM! GAMB NA VEIA-->
-        <p style="text-align:center;"><img src="img/me.png" width="45%" height="45%" /></p>
+        <p style="text-align:center;"><img src="img/me.png" alt="marcelofabiano.com" width="45%" height="45%" /></p>
     </div>
 </body>
 
