--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <meta name="theme-color" content="#000000">
     <meta name="description" content="Aqui você pode saber mais sobre mim e sobre o que faço, dar uma olhada no meu portfolio ou entrar em contato para novos jobs.">
     <meta name="author" content="Marcelo Fabiano">
-    <meta property=”og:title” content=”Marcelo Fabiano”/>
-    <meta property= “og:image” content=”http://marcelofabiano.co/img/me.png”/>
-    <meta property=”og:url” content=”marcelofabiano.com.br”/>
-    <meta property=”og:description” content=”Aqui você pode saber mais sobre mim e sobre o que faço, dar uma olhada no meu portfolio ou entrar em contato para novos jobs.”/>
+    <meta property="og:title" content="Marcelo Fabiano"/>
+    <meta property="og:image" content="http://marcelofabiano.co/img/me.png"/>
+    <meta property="og:url" content="marcelofabiano.com.br"/>
+    <meta property="og:description" content="Aqui você pode saber mais sobre mim e sobre o que faço, dar uma olhada no meu portfolio ou entrar em contato para novos jobs."/>
 
     <title>Marcelo Fabiano</title>
 
