--- a/index.html
+++ b/index.html
@@ -38,6 +38,24 @@
 </head>
 
 <body ondragstart='return false'>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '275883712834067',
+      xfbml      : true,
+      version    : 'v2.8'
+    });
+    FB.AppEvents.logPageView();
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
     <nav class="social">
         <ul>
             <li><a href="http://twitter.com/celofabiano" target="_blank" rel="noopener">Twitter <i class="fa fa-twitter"></i></a></li>
