--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <link href="css/style.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,200' rel="stylesheet"> 
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script>
     function bloquear(){
@@ -58,10 +58,10 @@
 </script>
     <nav class="social">
         <ul>
-            <li><a href="http://twitter.com/celofabiano" target="_blank" rel="noopener">Twitter <i class="fa fa-twitter"></i></a></li>
-            <li><a href="http://facebook.com/celofabiano" target="_blank" rel="noopener">Facebook <i class="fa fa-facebook"></i></a></li>
-            <li><a href="http://instagram.com/celofabiano" target="_blank" rel="noopener">Instagram <i class="fa fa-instagram"></i></a></li>
-            <li><a href="https://github.com/m-a-r-c-e-l-o" target="_blank" rel="noopener">GitHub <i class="fa fa-github"></i></a></li>          
+            <li><a href="https://github.com/m-a-r-c-e-l-o" target="_blank" rel="noopener">GitHub <i class="fa fa-github"></i></a></li>
+            <li><a href="https://www.freecodecamp.com/m-a-r-c-e-l-o" target="_blank" rel="noopener">Free Code Camp <i class="fa fa-free-code-camp"></i></a></li>
+            <li><a href="https://www.codecademy.com/marcelofabiano" target="_blank" rel="noopener">CodeAcademy <i class="fa fa-bars"></i></a></li>
+            <li><a href="https://facebook.com/celofabiano" target="_blank" rel="noopener">Facebook <i class="fa fa-facebook"></i></a></li>
         </ul>
     </nav>
     <div class="me">
