--- a/teste.html
+++ b/teste.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <body bgcolor="black">
-      <img src="http://cdn.naosalvo.com.br/2016/12/NE2.jpg" style="text-align:center">
-      <p style="color:white;font-size="20">HOJE NAO</p>
+      <img src="http://cdn.naosalvo.com.br/2016/12/NE2.jpg" width="100%" height="100%"style="text-align=center">
+      <p style="color:white;font-size="20px">HOJE NAO</p>
    </body>
 </html>
