--- a/teste.html
+++ b/teste.html
@@ -2,6 +2,6 @@
 <html>
    <body bgcolor="black">
       <img src="http://cdn.naosalvo.com.br/2016/12/NE2.jpg" width="100%" height="100%"style="text-align=center">
-      <p style="color:white;align:center"><font size="7">HOJE NAO</font></p>
+      <span style="font-size: 30px !important; color: #aaaaaa;">HOJE NAO</span>
    </body>
 </html>
