--- a/teste.html
+++ b/teste.html
@@ -2,6 +2,6 @@
 <html>
    <body bgcolor="black">
       <img src="http://cdn.naosalvo.com.br/2016/12/NE2.jpg" width="100%" height="100%"style="text-align=center">
-      <span style="font-size: 70px !important; color: #aaaaaa;">HOJE NAO</span>
+      <span style="font-size: 170px !important; color: #aaaaaa;">HOJE NÃO</span>
    </body>
 </html>
