--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
         document.onclick = desbloquear
     }
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LCN9HQFHZ7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LCN9HQFHZ7');
+</script>
 </head>
 
 <body ondragstart='return false'>
